--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@next/font": "^14.2.5",
     "axios": "^1.7.2",
+    "framer-motion": "^11.3.12",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
