--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@chakra-ui/spinner": "^2.1.0",
     "@hookform/resolvers": "^3.9.0",
     "@next/font": "^14.2.5",
+    "@types/fabric": "^5.3.8",
     "axios": "^1.7.2",
+    "fabric": "^5.3.0",
     "framer-motion": "^11.3.12",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.408.0",
@@ -22,6 +24,7 @@
     "nookies": "^2.5.2",
     "normalize.css": "^8.0.1",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
@@ -34,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
