--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "fabric": "^5.3.0",
     "framer-motion": "^11.3.12",
+    "heic2any": "^0.0.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
