--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.2.5",
     "nookies": "^2.5.2",
     "normalize.css": "^8.0.1",
+    "platform": "^1.3.6",
     "react": "^18",
     "react-color": "^2.19.3",
     "react-dom": "^18",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
+    "@types/platform": "^1.3.6",
     "@types/react": "^18",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
