--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/fabric": "^5.3.8",
     "axios": "^1.7.2",
     "browser-image-compression": "^2.0.2",
+    "clipboard": "^2.0.11",
     "fabric": "^5.3.0",
     "framer-motion": "^11.3.12",
     "heic2any": "^0.0.4",
@@ -34,6 +35,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
+    "react-use": "^17.5.1",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
