--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.7.2",
     "browser-image-compression": "^2.0.2",
     "clipboard": "^2.0.11",
+    "copy-image-clipboard": "^2.1.2",
+    "copy-to-clipboard": "^3.3.3",
     "fabric": "^5.3.0",
     "framer-motion": "^11.3.12",
     "heic2any": "^0.0.4",
