--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@appres/imgclip": "^0.0.23",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/spinner": "^2.1.0",
@@ -18,10 +19,6 @@
     "@types/fabric": "^5.3.8",
     "axios": "^1.7.2",
     "browser-image-compression": "^2.0.2",
-    "clipboard": "^2.0.11",
-    "clipboard-sys": "^1.2.1",
-    "copy-image-clipboard": "^2.1.2",
-    "copy-to-clipboard": "^3.3.3",
     "fabric": "^5.3.0",
     "framer-motion": "^11.3.12",
     "heic2any": "^0.0.4",
