--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@chakra-ui/spinner": "^2.1.0",
     "@hookform/resolvers": "^3.9.0",
     "@next/font": "^14.2.5",
+    "@phosphor-icons/react": "^2.1.7",
     "@types/fabric": "^5.3.8",
     "axios": "^1.7.2",
     "browser-image-compression": "^2.0.2",
+    "canvg": "^4.0.2",
     "fabric": "^5.3.0",
     "framer-motion": "^11.3.12",
     "heic2any": "^0.0.4",
