--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.2",
     "browser-image-compression": "^2.0.2",
     "canvg": "^4.0.2",
+    "date-fns": "^3.6.0",
     "fabric": "^5.3.0",
     "framer-motion": "^11.3.12",
     "heic2any": "^0.0.4",
