--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.2",
     "browser-image-compression": "^2.0.2",
     "canvg": "^4.0.2",
+    "convert-svg-to-png": "^0.6.4",
     "date-fns": "^3.6.0",
     "fabric": "^5.3.0",
     "framer-motion": "^11.3.12",
@@ -37,6 +38,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-svg": "^16.1.34",
     "react-toastify": "^10.0.5",
     "react-use": "^17.5.1",
     "yup": "^1.4.0",
