--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "react-icons": "^5.2.1",
     "react-svg": "^16.1.34",
     "react-toastify": "^10.0.5",
+    "react-tsparticles": "^2.12.2",
     "react-use": "^17.5.1",
+    "tsparticles": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
